<resources>
    <string name="app_name">EventFinder</string>
    <string name="mapButton">Открыть карту</string>
    <string name="explore">Иследуй</string>
    <string name="next">Далее</string>
    <string name="start">Начать</string>
    <string name="forAll">Афиша для всех</string>
    <string name="forAll_text">Развлечения на любой вкус и цвет!</string>
    <string name="fresh">Будь в курсе</string>
    <string name="fresh_text">Только актуальные мероприятия</string>
    <string name="explore_text">Находи интересные места и события в своём городе.</string>
    <string name="connection_problems">Не удалось установить связь с сервером!</string>
    <string name="city">Город</string>
    <string name="enterCity">Для продолжения вам необходимо указать место, в котором вы сейчас находитесь</string>

    <string name="chooseCity">Выберите город</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="home">Главная</string>
    <string name="events">События</string>
    <string name="places">Места</string>
    <string name="favorites">Избранное</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>